2003-04-12  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: sensible error if lilypond.words not found.

	* lilypond.words: add few words.

2003-04-11  Juergen Reuter  <reuter@ipd.uka.de>

	* mf/parmesan-clefs.mf: bugfix: char boxes corrected

	* mf/parmesan-scripts.mf: fixed typo in char name

2003-04-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py (setup_temp): temporary directories are mode 700.
	(this is a security vulnerability).

	* Documentation/user/lilypond.tely: remove abbreviations (n't, 's)

	* lily/multi-measure-rest-engraver.cc (stop_translation_timestep):
	add staff support.

2003-04-10  Juergen Reuter  <reuter@ipd.uka.de>

	* mf/parmesan-scripts.mf, Documentation/user/refman.itely,
	ly/script-init.ly, scm/script.scm: bugfix: renamed
	fermata->signumcongruentiae to fix naming clash with feta font

2003-04-10  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/multi-measure-rest-grace.ly (texidoc): new file

	* lily/multi-measure-rest-engraver.cc
	(start_translation_timestep): use grace timing too for determining
	when to make mmrest.
	(start_translation_timestep): clear numbers too.

2003-04-09  Juergen Reuter  <reuter@ipd.uka.de>

	* scm/music-types.scm: compile fix: escape braces

	* buildscripts/mf-to-table.py: replaced \char -> \musicglyph to
	work around font selection problem

	* Documentation/user/refman.itely: BreathingSign: added docu for
	property "text"

2003-04-09  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* Documentation/topdocs/AUTHORS.texi (AUTHORS): Updated contact
	information.

2003-04-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/multi-measure-rest-engraver.cc (class
	Multi_measure_rest_engraver): make multiple Number objects, one
	for each MultiMeasureTextEvent.

	* scm/music-functions.scm (glue-mm-rest-texts): use
	MultiMeasureTextEvent

	* scm/music-types.scm (music-descriptions): add MultiMeasureTextEvent

	* Documentation/user/refman.itely (Multi measure rests): update.
